Separate skill box from education and fixed overlapped v2 :fire:

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .widecard {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin: 10px 0 30px 0;
     padding: .5rem;
     transition: 0.5s;
@@ -44,7 +46,7 @@
     align-items: center;
     margin-bottom: 50px;
     overflow: hidden;
-    width: 100%;
+    width: 50%;
     justify-content: center;
 }
 
@@ -55,7 +57,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    border: 1px solid #04bade;
+    max-width: 100%;
 }
 
 .skills ul li {
@@ -99,9 +101,10 @@
 
 @media screen and (max-width: 768px) {
     .widecard {
-        width: 80%;
+        width: 70%;
         margin: 10px;
-    }   
+        font-size: 0.75rem;
+    }
 
     .widecard img {
         width: 50%;
@@ -117,13 +120,13 @@
     }
 
     .skills {
-        width: 100%;
+        width: 80%;
         margin-top: 0;
     }
 
     .skills ul li {
         margin: 5px;
-        padding: 8px; /* Adjusted padding for better spacing on smaller screens */
-        font-size: 0.9rem; /* Increased font size for better readability on smaller screens */
+        padding: 5px;
+        font-size: 0.8rem;
     }
 }
